everything BUT the Challenge 2

--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -35,24 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "toxic-trading",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import requests as req\n",
     "import os\n",
+    "import pandas as pd\n",
+    "import requests as req\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "\n",
     "github = os.getenv(\"token\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "static-stopping",
    "metadata": {},
    "outputs": [],
@@ -65,18 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d38ebffa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = f'https://api.github.com/repos/ironhack-datalabs/scavenger/contents?extension:scavengerhunt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "5b2498d1",
    "metadata": {},
    "outputs": [
     {
@@ -85,234 +74,193 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = req.get(url, headers=HEADER)\n",
+    "url = f'https://api.github.com/repos/ironhack-datalabs/scavenger/contents?extension:scavengerhunt'\n",
+    "res = req.get(url, headers = HEADER)\n",
     "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "28de9daa",
+   "execution_count": 4,
+   "id": "5b2498d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': '15024',\n",
-       " 'path': '15024',\n",
-       " 'sha': '2945e51c87ad5da893c954afcf092f06343bbb7d',\n",
-       " 'size': 0,\n",
-       " 'url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/contents/15024?ref=master',\n",
-       " 'html_url': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15024',\n",
-       " 'git_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/git/trees/2945e51c87ad5da893c954afcf092f06343bbb7d',\n",
-       " 'download_url': None,\n",
-       " 'type': 'dir',\n",
-       " '_links': {'self': 'https://api.github.com/repos/ironhack-datalabs/scavenger/contents/15024?ref=master',\n",
-       "  'git': 'https://api.github.com/repos/ironhack-datalabs/scavenger/git/trees/2945e51c87ad5da893c954afcf092f06343bbb7d',\n",
-       "  'html': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15024'}}"
+       "'https://api.github.com/repos/ironhack-datalabs/scavenger/contents/.gitignore?ref=master'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "res_api = res.json()\n",
-    "res_api[1]"
+    "res_api[0]['url']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "f6521122",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(res_api)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "fb290e7a",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "output = {}\n",
+    "roots = []\n",
     "\n",
-    "for i in range(26):\n",
-    "    url = res_api[i]['_links']['html']\n",
-    "    name = res_api[i]['name']\n",
-    "    output[name] = url"
+    "for i in range(len(res_api)):\n",
+    "    url = res_api[i]['url']\n",
+    "    roots.append(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "486c0ad7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'.gitignore': 'https://github.com/ironhack-datalabs/scavenger/blob/master/.gitignore',\n",
-       " '15024': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15024',\n",
-       " '15534': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15534',\n",
-       " '17020': 'https://github.com/ironhack-datalabs/scavenger/tree/master/17020',\n",
-       " '30351': 'https://github.com/ironhack-datalabs/scavenger/tree/master/30351',\n",
-       " '40303': 'https://github.com/ironhack-datalabs/scavenger/tree/master/40303',\n",
-       " '44639': 'https://github.com/ironhack-datalabs/scavenger/tree/master/44639',\n",
-       " '45525': 'https://github.com/ironhack-datalabs/scavenger/tree/master/45525',\n",
-       " '47222': 'https://github.com/ironhack-datalabs/scavenger/tree/master/47222',\n",
-       " '47830': 'https://github.com/ironhack-datalabs/scavenger/tree/master/47830',\n",
-       " '49418': 'https://github.com/ironhack-datalabs/scavenger/tree/master/49418',\n",
-       " '50896': 'https://github.com/ironhack-datalabs/scavenger/tree/master/50896',\n",
-       " '55417': 'https://github.com/ironhack-datalabs/scavenger/tree/master/55417',\n",
-       " '55685': 'https://github.com/ironhack-datalabs/scavenger/tree/master/55685',\n",
-       " '60224': 'https://github.com/ironhack-datalabs/scavenger/tree/master/60224',\n",
-       " '64880': 'https://github.com/ironhack-datalabs/scavenger/tree/master/64880',\n",
-       " '66032': 'https://github.com/ironhack-datalabs/scavenger/tree/master/66032',\n",
-       " '68848': 'https://github.com/ironhack-datalabs/scavenger/tree/master/68848',\n",
-       " '70751': 'https://github.com/ironhack-datalabs/scavenger/tree/master/70751',\n",
-       " '70985': 'https://github.com/ironhack-datalabs/scavenger/tree/master/70985',\n",
-       " '88596': 'https://github.com/ironhack-datalabs/scavenger/tree/master/88596',\n",
-       " '89046': 'https://github.com/ironhack-datalabs/scavenger/tree/master/89046',\n",
-       " '89338': 'https://github.com/ironhack-datalabs/scavenger/tree/master/89338',\n",
-       " '91701': 'https://github.com/ironhack-datalabs/scavenger/tree/master/91701',\n",
-       " '97881': 'https://github.com/ironhack-datalabs/scavenger/tree/master/97881',\n",
-       " '98750': 'https://github.com/ironhack-datalabs/scavenger/tree/master/98750'}"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "a67e8c69",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\ingle\\_clase\\4.1-lab_api_scavengers_game\\your-code\\challenge-3.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ingle/_clase/4.1-lab_api_scavengers_game/your-code/challenge-3.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m k,v \u001b[39min\u001b[39;00m output:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ingle/_clase/4.1-lab_api_scavengers_game/your-code/challenge-3.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     url \u001b[39m=\u001b[39m output[k]\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for k,v in output:\n",
-    "    url = output[k]"
+    "names = []\n",
+    "paths = []\n",
+    "dict_names_paths = {}\n",
+    "\n",
+    "for url in roots[1:26]:\n",
+    "    res_ = req.get(url, headers = HEADER)\n",
+    "    res_api_ = res_.json()\n",
+    "    for i in range(3):\n",
+    "        names.append(res_api_[i]['name'])\n",
+    "        paths.append(res_api_[i]['path'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "e8dc7a5e",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'dict' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\ingle\\_clase\\4.1-lab_api_scavengers_game\\your-code\\challenge-3.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ingle/_clase/4.1-lab_api_scavengers_game/your-code/challenge-3.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m output(\u001b[39m0\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'dict' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "959a76c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'.gitignore': 'https://github.com/ironhack-datalabs/scavenger/blob/master/.gitignore',\n",
-       " '15024': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15024',\n",
-       " '15534': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15534',\n",
-       " '17020': 'https://github.com/ironhack-datalabs/scavenger/tree/master/17020',\n",
-       " '30351': 'https://github.com/ironhack-datalabs/scavenger/tree/master/30351',\n",
-       " '40303': 'https://github.com/ironhack-datalabs/scavenger/tree/master/40303',\n",
-       " '44639': 'https://github.com/ironhack-datalabs/scavenger/tree/master/44639',\n",
-       " '45525': 'https://github.com/ironhack-datalabs/scavenger/tree/master/45525',\n",
-       " '47222': 'https://github.com/ironhack-datalabs/scavenger/tree/master/47222',\n",
-       " '47830': 'https://github.com/ironhack-datalabs/scavenger/tree/master/47830',\n",
-       " '49418': 'https://github.com/ironhack-datalabs/scavenger/tree/master/49418',\n",
-       " '50896': 'https://github.com/ironhack-datalabs/scavenger/tree/master/50896',\n",
-       " '55417': 'https://github.com/ironhack-datalabs/scavenger/tree/master/55417',\n",
-       " '55685': 'https://github.com/ironhack-datalabs/scavenger/tree/master/55685',\n",
-       " '60224': 'https://github.com/ironhack-datalabs/scavenger/tree/master/60224',\n",
-       " '64880': 'https://github.com/ironhack-datalabs/scavenger/tree/master/64880',\n",
-       " '66032': 'https://github.com/ironhack-datalabs/scavenger/tree/master/66032',\n",
-       " '68848': 'https://github.com/ironhack-datalabs/scavenger/tree/master/68848',\n",
-       " '70751': 'https://github.com/ironhack-datalabs/scavenger/tree/master/70751',\n",
-       " '70985': 'https://github.com/ironhack-datalabs/scavenger/tree/master/70985',\n",
-       " '88596': 'https://github.com/ironhack-datalabs/scavenger/tree/master/88596',\n",
-       " '89046': 'https://github.com/ironhack-datalabs/scavenger/tree/master/89046',\n",
-       " '89338': 'https://github.com/ironhack-datalabs/scavenger/tree/master/89338',\n",
-       " '91701': 'https://github.com/ironhack-datalabs/scavenger/tree/master/91701',\n",
-       " '97881': 'https://github.com/ironhack-datalabs/scavenger/tree/master/97881',\n",
-       " '98750': 'https://github.com/ironhack-datalabs/scavenger/tree/master/98750'}"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "409a7771",
+   "execution_count": 7,
+   "id": "b9e944e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dict_names_paths['names'] = names\n",
+    "dict_names_paths['paths'] = paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dd769693",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_names = sorted(zip(dict_names_paths['names'], dict_names_paths['paths']))\n",
+    "dict_names_paths = {'names': [x[0] for x in sorted_names], 'paths': [x[1] for x in sorted_names]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4a37c643",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = []\n",
+    "\n",
+    "for i in range(len(dict_names_paths['names'])):\n",
+    "    if 'hunt' in dict_names_paths['names'][i]:\n",
+    "        output.append(dict_names_paths['paths'][i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "13b28096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_url = []\n",
+    "\n",
+    "for url in output:\n",
+    "    url = 'https://raw.githubusercontent.com/ironhack-datalabs/scavenger/master/' + url\n",
+    "    words_url.append(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "76ce69ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In\n",
+      "\n",
+      "data\n",
+      "\n",
+      "science,\n",
+      "\n",
+      "80\n",
+      "\n",
+      "percent\n",
+      "\n",
+      "of\n",
+      "\n",
+      "time\n",
+      "\n",
+      "spent\n",
+      "\n",
+      "is\n",
+      "\n",
+      "preparing\n",
+      "\n",
+      "data,\n",
+      "\n",
+      "20\n",
+      "\n",
+      "percent\n",
+      "\n",
+      "of\n",
+      "\n",
+      "time\n",
+      "\n",
+      "is\n",
+      "\n",
+      "spent\n",
+      "\n",
+      "complaining\n",
+      "\n",
+      "about\n",
+      "\n",
+      "the\n",
+      "\n",
+      "need\n",
+      "\n",
+      "to\n",
+      "\n",
+      "prepare\n",
+      "\n",
+      "data.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for url in words_url:\n",
+    "    word = (req.get(url, headers = HEADER)).text\n",
+    "    print(word)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
