--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -24,83 +24,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "id": "developing-printing",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "import requests as req\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n"
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "id": "creative-stable",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ongoing-taylor",
    "metadata": {},
    "outputs": [],
    "source": [
+    "load_dotenv()\n",
     "github = os.getenv(\"token\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "480f338d",
+   "execution_count": 83,
+   "id": "ongoing-taylor",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../token.txt') as file:\n",
-    "    my_token = file.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "de073ba8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    my_token = file.read()\n",
+    "\n",
     "HEADER = {'Authorization': 'token ' + my_token } "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "id": "93afbf56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/1.5-lab_vikings'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8ccf707a",
    "metadata": {},
    "outputs": [
     {
@@ -109,42 +71,132 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = req.get(url, headers=HEADER)\n",
+    "url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/1.2-lab_list_comprehension'\n",
+    "res = req.get(url, headers = HEADER)\n",
     "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "id": "f1ed6fd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_api = res.json()\n",
+    "f_url = res_api['forks_url']\n",
+    "f_res = req.get(f_url, headers = HEADER)\n",
+    "f_res_api = f_res.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "40a73d74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commits = {'user': [], 'commits': []}\n",
+    "\n",
+    "counter = 0\n",
+    "for i in range(len(f_res_api)):\n",
+    "    commits['user'].append(f_res_api[i]['full_name'].replace('/1.2-lab_list_comprehension', ''))\n",
+    "#     api = str(req.get(f_res_api[i]['url'], headers = HEADER).json())\n",
+    "    lista = list((req.get(f_res_api[i]['url'], headers = HEADER).json()).items())\n",
+    "    counts = lista.count('commits')\n",
+    "    commits['commits'].append(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "5dda4cc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['id', 'node_id', 'name', 'full_name', 'private', 'owner', 'html_url', 'description', 'fork', 'url', 'forks_url', 'keys_url', 'collaborators_url', 'teams_url', 'hooks_url', 'issue_events_url', 'events_url', 'assignees_url', 'branches_url', 'tags_url', 'blobs_url', 'git_tags_url', 'git_refs_url', 'trees_url', 'statuses_url', 'languages_url', 'stargazers_url', 'contributors_url', 'subscribers_url', 'subscription_url', 'commits_url', 'git_commits_url', 'comments_url', 'issue_comment_url', 'contents_url', 'compare_url', 'merges_url', 'archive_url', 'downloads_url', 'issues_url', 'pulls_url', 'milestones_url', 'notifications_url', 'labels_url', 'releases_url', 'deployments_url', 'created_at', 'updated_at', 'pushed_at', 'git_url', 'ssh_url', 'clone_url', 'svn_url', 'homepage', 'size', 'stargazers_count', 'watchers_count', 'language', 'has_issues', 'has_projects', 'has_downloads', 'has_wiki', 'has_pages', 'has_discussions', 'forks_count', 'mirror_url', 'archived', 'disabled', 'open_issues_count', 'license', 'allow_forking', 'is_template', 'web_commit_signoff_required', 'topics', 'visibility', 'forks', 'open_issues', 'watchers', 'default_branch', 'permissions', 'temp_clone_token', 'organization', 'network_count', 'subscribers_count'])"
+       "{'user': ['abelnperez',\n",
+       "  'illegalvoidundead',\n",
+       "  'anderfer',\n",
+       "  'ClaraGallardo_Clara',\n",
+       "  'Carolina-MH',\n",
+       "  'BorjaSilla_borja',\n",
+       "  'NoeRoson',\n",
+       "  'SaraPazo',\n",
+       "  'yaninafontana84',\n",
+       "  'karmelealonso',\n",
+       "  'charlieciordia',\n",
+       "  'Jacobomb',\n",
+       "  'Ankourii',\n",
+       "  'jvr0',\n",
+       "  'Matimengot',\n",
+       "  'maluque',\n",
+       "  'josegzr',\n",
+       "  'Blanca95_Blanca',\n",
+       "  'cristianecarneiro',\n",
+       "  'Christelllameda',\n",
+       "  'mariasanzr',\n",
+       "  'AlvaroYague',\n",
+       "  'arromeral',\n",
+       "  'EdgarAhmed',\n",
+       "  'LeoBulcsu',\n",
+       "  'inesgcalvo',\n",
+       "  'luisgh87',\n",
+       "  'jomariapc',\n",
+       "  'alicialafuente',\n",
+       "  'Lidiavf1912'],\n",
+       " 'commits': [0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res_api = res.json()\n",
-    "res_api.keys()"
+    "commits"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd6dbe06",
+   "id": "702fabf3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -152,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -166,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
