and the challenge 2[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D...and [2~the [2~challenge 2

--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 61,
    "id": "developing-printing",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 70,
    "id": "creative-stable",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 92,
    "id": "ongoing-taylor",
    "metadata": {},
    "outputs": [],
@@ -61,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "93afbf56",
+   "execution_count": 105,
+   "id": "c4241ebc",
    "metadata": {},
    "outputs": [
     {
@@ -71,135 +71,76 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/1.2-lab_list_comprehension'\n",
+    "url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/apuntes_clase'\n",
     "res = req.get(url, headers = HEADER)\n",
     "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "f1ed6fd8",
+   "execution_count": 106,
+   "id": "3071ede1",
    "metadata": {},
    "outputs": [],
    "source": [
     "res_api = res.json()\n",
-    "f_url = res_api['forks_url']\n",
-    "f_res = req.get(f_url, headers = HEADER)\n",
-    "f_res_api = f_res.json()"
+    "c_url = res_api['commits_url']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "40a73d74",
+   "execution_count": 113,
+   "id": "951ec5a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "commits = {'user': [], 'commits': []}\n",
+    "date = []\n",
     "\n",
-    "counter = 0\n",
-    "for i in range(len(f_res_api)):\n",
-    "    commits['user'].append(f_res_api[i]['full_name'].replace('/1.2-lab_list_comprehension', ''))\n",
-    "#     api = str(req.get(f_res_api[i]['url'], headers = HEADER).json())\n",
-    "    lista = list((req.get(f_res_api[i]['url'], headers = HEADER).json()).items())\n",
-    "    counts = lista.count('commits')\n",
-    "    commits['commits'].append(counts)"
+    "'''\n",
+    "Here, I create an index to check in the next page of commits.\n",
+    "To do so, I copied from github what is the name for the next page.\n",
+    "However, it is not working properly because I am obtaining the same dates for both,\n",
+    "the first and the second page.\n",
+    "I decided to conclude this challenge here: \n",
+    "Printing the # of commits for this repo during this week.\n",
+    "'''\n",
+    "\n",
+    "index = ['', '?after=6c615a7aa4c810766927b58ac8089fddab7e4193+34']\n",
+    "\n",
+    "for i in index:\n",
+    "    url_ = c_url.replace('{/sha}', i)\n",
+    "    res_ = req.get(url_, headers = HEADER)\n",
+    "    c_res_api_ = res_.json()\n",
+    "    for j in range(30):\n",
+    "        date.append(c_res_api_[j]['commit']['author']['date'].split('T'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "5dda4cc5",
+   "execution_count": 115,
+   "id": "128e54d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'user': ['abelnperez',\n",
-       "  'illegalvoidundead',\n",
-       "  'anderfer',\n",
-       "  'ClaraGallardo_Clara',\n",
-       "  'Carolina-MH',\n",
-       "  'BorjaSilla_borja',\n",
-       "  'NoeRoson',\n",
-       "  'SaraPazo',\n",
-       "  'yaninafontana84',\n",
-       "  'karmelealonso',\n",
-       "  'charlieciordia',\n",
-       "  'Jacobomb',\n",
-       "  'Ankourii',\n",
-       "  'jvr0',\n",
-       "  'Matimengot',\n",
-       "  'maluque',\n",
-       "  'josegzr',\n",
-       "  'Blanca95_Blanca',\n",
-       "  'cristianecarneiro',\n",
-       "  'Christelllameda',\n",
-       "  'mariasanzr',\n",
-       "  'AlvaroYague',\n",
-       "  'arromeral',\n",
-       "  'EdgarAhmed',\n",
-       "  'LeoBulcsu',\n",
-       "  'inesgcalvo',\n",
-       "  'luisgh87',\n",
-       "  'jomariapc',\n",
-       "  'alicialafuente',\n",
-       "  'Lidiavf1912'],\n",
-       " 'commits': [0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0]}"
+       "60"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "commits"
+    "len(date)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "702fabf3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
